--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -464,7 +464,6 @@
                             </div>
                           
                           
-                          
                             <div class="col-md-12 ml-auto mr-auto">
                               <div class="row">
                                 <div class="col-md-6">
@@ -474,7 +473,6 @@
                                 </div>
                               </div>
                             </div>
-                          
                           
                           
                             <div class="col-md-12 ml-auto mr-auto">
@@ -488,8 +486,17 @@
                             </div>
                           
                           
-                          
                             <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../classification-log">Outstanding Action Items</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+
+                            <!-- <div class="col-md-12 ml-auto mr-auto">
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
@@ -497,10 +504,10 @@
                                   </p>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
                           
                           
-                          
+                          <div hidden>
                             <div class="col-md-12 ml-auto mr-auto">
                               <div class="row">
                                 <div class="col-md-6">
@@ -561,6 +568,132 @@
                               <p class="text-left title " style="color: darkslategray">Profile Summary</p>
                               <!-- <br> -->
                             </div>
+                          </div>
+                          
+                            
+                          </div>
+
+
+                          <div class="tab-pane active" id="public" role="tabpanel" aria-expanded="true">
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../total-actions">Personal Details</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                          
+                          
+                          
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../timeSpent-report">Total time spent on an activity in a period</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                          
+                          
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../activity-reportLog">Time sheet report in a period</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                          
+                          
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../total-actions">My Time Sheet for each day</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                          
+                          
+                            <div class="col-md-12 ml-auto mr-auto">
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <p class="text-left title " style="color: darkslategray">
+                                    <span> <a routerLink="../outstandingTask-report">Outstanding Action Items</a></span>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                          
+                          
+                            <div hidden>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <div class="row">
+                                  <div class="col-md-6">
+                                    <p class="text-left title " style="color: darkslategray">My Work Time Sheet as @</p>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <div class="row">
+                                  <div class="col-md-6">
+                                    <p class="text-left title " style="color: darkslategray">My Cumulative Time Sheet for Period
+                                    </p>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left title " style="color: darkslategray">My Weekly Time Budget</p>
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left title " style="color: darkslategray">Time Budget Actual vs
+                                  Planned</p>
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left title " style="color: darkslategray">Tasks</p>
+                                <!-- <br> -->
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left title " style="color: darkslategray">Health Factor</p>
+                                <!-- <br> -->
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left title " style="color: darkslategray">Work Factor</p>
+                                <!-- <br> -->
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left" style="color: darkslategray"><span class="title ">Net Worth</span>
+                                  (<small>As to date</small>)</p>
+                                <!-- <br> -->
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left title " style="color: darkslategray">Schedule of Outstanding Personal Tasks
+                                </p>
+                                <!-- <br> -->
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left title " style="color: darkslategray">Personal Project Reports
+                                </p>
+                                <!-- <br> -->
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left title " style="color: darkslategray">User`s Enterprise Internal Reports</p>
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left title " style="color: darkslategray">Personal Internal Perfomance reviews</p>
+                                <!-- <br> -->
+                              </div>
+                              <div class="col-md-12 ml-auto mr-auto">
+                                <p class="text-left title " style="color: darkslategray">Profile Summary</p>
+                                <!-- <br> -->
+                              </div>
+                            </div>
+                          
                           
                           </div>
                           
