--- a/src/app/calendar/diary/diary.component.html
+++ b/src/app/calendar/diary/diary.component.html
@@ -9,7 +9,7 @@
                 <p class="na-p">Your ToDo List Diary</p>
               </div>
               <div class="col-md-4 text-left">
-                  <p class="clrs-h4 text-center"><span id="thrs">{{ nHrs }} </span>: <span id="tmins">{{ nMin }} </span>: <span>{{ nSecs }}</span></p>
+                  <p class="clrs-h4-font text-center"><span id="thrs">{{ nHrs }} </span>: <span id="tmins">{{ nMin }} </span>: <span>{{ nSecs }}</span></p>
               </div>
               <div class="col-md-4 text-right">Today`s Overview</div>
             </div>
