--- a/src/app/calendar/totals-action-items/totals-action-items.component.html
+++ b/src/app/calendar/totals-action-items/totals-action-items.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="row">
     <div class="col-md-8">
-      <p class="text-left title clrs-h4" style="color: darkslategray">My Time Sheet for each day</p>
+      <p class="text-left title clrs-h4-font" style="color: darkslategray">My Time Sheet for each day</p>
     </div>
     <div class="col-md-4">
       <div class="col-md-12">
@@ -16,7 +16,7 @@
   </div>
   <div class="card-content table-responsive table-full-width">
     <table class="table table-striped">
-      <thead class="title clrs-h4">
+      <thead class="title clrs-h4-font">
         <th class="text-left table td-clrs">Activity</th>
         <th class="table td-clrs">Start Date</th>
         <th class="table td-clrs">End Date</th>
