--- a/src/app/company/enterprise-profile/draft/enterprise-profile.component.html
+++ b/src/app/company/enterprise-profile/draft/enterprise-profile.component.html
@@ -61,7 +61,7 @@
                       <div class="card">
                         <div class="card-content btn-magnify">
                           <div class="row col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
-                            <div class="clrs-h4 col-md-12" style="color:steelblue">
+                            <div class="clrs-h4-font col-md-12" style="color:steelblue">
                               <a><i class="nc-icon nc-palette"></i> Colours Personal</a>
                             </div><br>
                             <div class="col-md-112">
@@ -151,7 +151,7 @@
                       <div class="card">
                         <div class="card-content btn-magnify">
                           <div class="row col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
-                            <div class="clrs-h4" style="color:steelblue">
+                            <div class="clrs-h4-font" style="color:steelblue">
                               <a><i class="fa fa-tasks fa-fw"></i> Colours Enterprise</a>
                             </div><br>
                             <div class="col-md-112">
@@ -238,7 +238,7 @@
                       <div class="card">
                         <div class="card-content btn-magnify">
                           <div class="row col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
-                            <div class="clrs-h4" style="color:steelblue">
+                            <div class="clrs-h4-font" style="color:steelblue">
                               <a><i class="fa fa-feed  fa-flip-vertical fa-fw"></i> {{ (company)?.name }} News</a>
                             </div><br>
                             <div class="text-left" style="padding-top: -1em; color: steelblue;font-size: 2 ">
@@ -2230,7 +2230,7 @@
 
 
                         <div class="tab-pane" id="weekly" role="tabpanel" aria-expanded="false">
-                          <div class="row card-category clrs-h4">
+                          <div class="row card-category clrs-h4-font">
                             <div class="col-xs-1"></div>                            
                             <div class="col-md-3">Activity</div>
                             <div class="col-md-3 text-left na-an">Start</div>
@@ -2262,13 +2262,13 @@
 
 
                         <div class="tab-pane" id="diary" role="tabpanel" aria-expanded="false">
-                          <div class="row card-category clrs-h4">
+                          <div class="row card-category clrs-h4-font">
                             <div class="col-sm-3">
                               <a class="clrs-h1 text-left">Daily Diary</a>
                             </div>
                             <div class="col-sm-2"></div>
                             <div class="col-sm-2"><a class="btn btn-primary btn-link a-mycol" (click)="changeDay('previous','startDate')">Previous</a></div>
-                            <div class="col-sm-3 clrs-h4 text-info">{{ workWeekDay }} {{ workDay }}</div>
+                            <div class="col-sm-3 clrs-h4-font text-info">{{ workWeekDay }} {{ workDay }}</div>
                             <div class="col-sm-2"><a class="btn btn-primary btn-link a-mycol" (click)="changeDay('next','startDate')">Next</a></div>
                           </div>
                           <div class="card-body" style="margin-top: -10px">
