--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -336,7 +336,7 @@
             <p class="na-p">Your ToDo List Diary</p>
           </div>
           <div class="col-md-4 text-left">
-            <p class="clrs-h4 text-center"><span id="thrs">{{ nHrs }} </span>: <span id="tmins">{{ nMin }} </span>:
+            <p class="clrs-h4-font text-center"><span id="thrs">{{ nHrs }} </span>: <span id="tmins">{{ nMin }} </span>:
               <span>{{ nSecs }}</span>
             </p>
           </div>
@@ -349,7 +349,7 @@
 
   <div class="modal-body">
     <div class="row">
-      <p class="clrs-h4" style="padding-left: 25px;">Your Diary Time Check</p>
+      <p class="clrs-h4-font" style="padding-left: 25px;">Your Diary Time Check</p>
       <p class="category text-left text-info" style="margin-bottom:-1em; padding-left: 25px;">
         <!-- Please click or enter to confirm your current engagement \ Task -->
         Please click or enter new task for assistance in tracking and managing your Daily diary
@@ -445,7 +445,7 @@
             <p class="na-p">Your ToDo List Diary</p>
           </div>
           <div class="col-md-4 text-left">
-            <p class="clrs-h4 text-center"><span id="thrs">{{ nHrs }} </span>: <span id="tmins">{{ nMin }} </span>:
+            <p class="clrs-h4-font text-center"><span id="thrs">{{ nHrs }} </span>: <span id="tmins">{{ nMin }} </span>:
               <span>{{ nSecs }}</span>
             </p>
           </div>
@@ -456,7 +456,7 @@
   </div>
   <div class="modal-body" style="padding-bottom:0px">
     <div class="row">
-      <p class="clrs-h4" style="padding-left: 25px;">This is your Diary Time Check</p>
+      <p class="clrs-h4-font" style="padding-left: 25px;">This is your Diary Time Check</p>
       <p class="category text-left text-info" style="margin-bottom:-1em; padding-left: 25px;">
         <!-- Please click or enter to confirm your current engagement \ Task -->
         Please click or enter new task for assistance in tracking and managing your Daily diary
