--- a/src/app/calendar/activity-log/activity-log.component.html
+++ b/src/app/calendar/activity-log/activity-log.component.html
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-md-4">
-      <p class="text-left title clrs-h4" style="color: darkslategray">My Cumulative Time Sheet for Period</p>
+      <p class="text-left title clrs-h4-font" style="color: darkslategray">My Cumulative Time Sheet for Period</p>
     </div>
     <div class="row col-md-6">
       <div class="col-md-6">
