--- a/src/app/calendar/classification-timesheet/classification-timesheet.component.html
+++ b/src/app/calendar/classification-timesheet/classification-timesheet.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="row">
     <div class="col-md-8">
-      <p class="text-left title clrs-h4" style="color: darkslategray">My Summerized Time Sheet</p>
+      <p class="text-left title clrs-h4-font" style="color: darkslategray">My Summerized Time Sheet</p>
     </div>
     <div class="col-md-4">
       <div class="col-md-12">
@@ -16,7 +16,7 @@
   </div>
   <div class="card-content table-responsive table-full-width">
     <table class="table table-striped">
-      <thead class="title clrs-h4">
+      <thead class="title clrs-h4-font">
         <th class="text-left table td-clrs">Classification</th>
         <th class="text-right table td-clrs">Hours Spent</th>
       </thead>
@@ -32,7 +32,7 @@
           </ng-template>
         </tr>
         <tr>
-          <td class="text-left table td-clrs title clrs-h4"
+          <td class="text-left table td-clrs title clrs-h4-font"
             style="color: darkslategray; border-bottom-style: double; border-top-color: black;border-bottom-color: black;">Totals</td>
           <td class="text-right table td-clrs"
             style="padding-right:2em; border-bottom-style: double; border-top-color: black;border-bottom-color: black;"><span>{{ totalHours }}</span></td>
