--- a/src/app/individual-rpts/individual-rpts.component.html
+++ b/src/app/individual-rpts/individual-rpts.component.html
@@ -1,9 +1,14 @@
 <div class="main-content">
   <div class="row">
+    <div style="text-align:left;margin-left: 50px">
+      <!-- <img alt="Southland Logo" src="/src/app/southland-logo.jpg"> -->
+      <!-- <img alt="Colours Logo" width="100" src="../../assets/Colourslogo.png"> -->
+      <img alt="Colours Logo" width="100" src="../../../assets/img/Colourslogo.PNG">
+    </div>
     <div class="col-lg-12 text-center">
       <div class="card  card-tasks">
         <div class="card-header ">
-          <h4 class="card-title">Individual-Reports</h4>
+          <h4 class="card-title clrs-h1-font">Individual-Reports</h4>
         </div>
         <div class="spacer" style="height: 2em"></div>
         <div class="card-body">
@@ -27,6 +32,13 @@
               <li class="nav-item">
                 <a class="pagination pagination-primary" title="click to see the other reports" data-toggle="tab" href="#link9"
                   role="tablist">
+                  Outstanding Activities
+                </a>
+              </li>
+              <span style="color:darkslategrey"> -|- </span>
+              <li class="nav-item">
+                <a class="pagination pagination-primary" title="click to see the other reports" data-toggle="tab" href="#link10"
+                  role="tablist">
                   Others
                 </a>
               </li>
@@ -37,10 +49,15 @@
               <app-r-time-spent-e></app-r-time-spent-e>
             </div>
             <div class="tab-pane" id="link8">
-              <div class="card-header text-left">Activity log</div><br>              
+              <!-- <div class="card-header text-left">Activity log</div><br>               -->
                 <app-r-activity-log-e></app-r-activity-log-e>
             </div>
             <div class="tab-pane" id="link9">
+              <!-- <div class="card-header text-left">Outstanding Task activities</div><br> -->
+                <!-- <app-r-os-actions-e></app-r-os-actions-e> -->
+                <app-r-os-tasks-e></app-r-os-tasks-e>
+            </div>
+            <div class="tab-pane" id="link10">
                 <div class="card-header text-left">Other reports</div><br>
               
             </div>
