--- a/src/app/calendar/activity-log/activity-log.component.html
+++ b/src/app/calendar/activity-log/activity-log.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="card-content table-responsive table-full-width">
     <table class="table table-striped">
-      <thead class="title clrs-h4">
+      <thead class="title clrs-h4-font">
         <th class="text-left table td-clrs">Activity</th>
         <th class="table td-clrs">Start Date</th>
         <th class="table td-clrs">End Date</th>
